--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "msnodesqlv8": "^2.0.5",
+    "mssql": "^6.2.3",
+    "tedious": "^9.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
